<resources>
    <string name="app_name">Radha Soami</string>
    <string name="radha_soami">Radha Soami</string>
    <string name="share_app">Share App</string>
    <string name="about_us">About Us</string>
    <string name="about_us_text">Radha Soami Satsang Beas (RSSB) along with its international affiliates is a spiritual organization based on the teachings of all religions and dedicated to a process of inner development under the guidance of a spiritual teacher.In the Indian language, Radha Soami means ‘lord of the soul’, satsang describes a group that seeks truth, and Beas refers to the town near which the main centre is located in northern India. There are a number of other contemporary movements that use the name ‘Radha Soami’ but Radha Soami Satsang Beas is not associated with any of them. \n\n RSSB was established in India in 1891 and gradually began spreading to other countries. Today RSSB holds meetings in more than 90 countries worldwide. It is a non-profit organization with no affiliation to any political or commercial organizations.\nThe basis of every religion is spirituality. With the passage of time and changing social values, the basic spiritual teachings often become embellished with extra rules and rituals, and eventually take the shape of a formal religion. Despite its extensive outreach activities, RSSB tries to maintain the integrity of its spiritual core and preserve the simplicity of its teachings. At the heart of the RSSB teachings is a belief that there is a spiritual purpose to human life – to experience the divinity of God who resides in all of us. It is through this experience that we will realize the truth of the concept that there is only one God and we are all expressions of his love.\n\n Central to the RSSB teachings is a spiritual teacher who explains the purpose of life and guides and instructs members in a method of spirituality based on a daily meditation practice. The present teacher is Baba Gurinder Singh, who lives with his family at the main centre in northern India. By performing the meditation practice according to the teacher\'s instructions, individuals can realize the presence of God within themselves. It is a solitary practice that is done in the quiet of one\'s own home. Members commit themselves to a way of life that supports spiritual growth while carrying out their responsibilities to family, friends and society. There are no rituals, ceremonies, hierarchies or mandatory contributions, nor are there compulsory gatherings. Members need not give up their cultural identity or religious preference to follow this path.\n\nTo build on the primary spiritual practice of meditation, members are vegetarian, abstain from alcohol, tobacco, and recreational drugs, and are expected to lead a life of high moral values. A vegetarian diet encourages respect and empathy for all life and acknowledges that there is a debt to be paid for taking any life unnecessarily. Abstaining from intoxicants improves ones ability to concentrate and calms the mind during meditation. Members are encouraged to be self-supporting and not be a burden on society. They are free to make their own choices in life and maintain any cultural or religious affiliations they choose. RSSB does not involve itself in the personal lives of its members.\n\nInherent to the Society’s philosophy is the importance of seva, meaning selfless service, or voluntarism. Voluntary service is the backbone of all activities connected with RSSB. All administrative functions, construction of Indian and international centres, feeding of the hundreds of thousands of visitors who visit the headquarters in India, writing and translating books and magazines explaining the teachings, are done by members on a voluntary basis. Mahatma Gandhi embodied the importance of service in his statement: “The best way to find your self is to lose yourself in the service of others.” It is believed that through service, one loses one\’s sense of self-importance and becomes humble. That is the foundation of a spiritual life.</string>
    <string name="rate_us">Rate Us</string>
    <string name="overview">Overview</string>
    <string name="youtube">Radha Soami Youtube</string>
    <string name="bhajans">Bhajans</string>
    <string name="education">Education</string>
    <string name="photos">Photographs</string>
    <string name="punjabi">Punjabi</string>
    <string name="hindi">Hindi</string>
    <string name="english">English</string>
    <string name="dera_jaimal">Dera Baba Jaimal Singh</string>
    <string name="overview_1">RSSB\'s main centre is Dera Baba Jaimal Singh, named after its founder who settled there in the late 1800’s. Located in Punjab, India, the ‘Dera’ is a self-contained community with both administrative and residential facilities. Although the centres throughout the world are affiliated with RSSB India, each country\'s administration is autonomous, with a Board of Management that operates under a standard constitution modified to comply with local laws and conditions. Administration is handled entirely by volunteers, and operations are funded through unsolicited donations. The organization does not engage in any fundraising activities.\\n\\nThere are more than 5,000 RSSB centres throughout India, and internationally RSSB-affiliated organizations hold meetings in more than 90 countries. Meetings are held in rented halls, community centres or RSSB-owned properties. The purpose of these gatherings is to explain the RSSB philosophy. The meetings are non-denominational and open to the public. No fees are charged and there is no advertising or proselytizing.</string>
    <string name="dera_lib">Dera Library</string>
    <string name="overview_2">RSSB has a publishing department that has produced more than 70 original titles on spirituality. Volunteers have translated a large selection of these books into 35 languages. A 20,000 square-metre library at the main centre in India will eventually house a collection of nearly 500,000 volumes concentrating on world religions, mysticism, philosophy and related subjects. The library will be open to scholars and researchers of all faiths.</string>
    <string name="beas_hospital">Beas Hospital</string>
    <string name="overview_3">In order to consolidate RSSB’s medical outreach and health initiatives, it has set up a sister organization, the Maharaj Jagat Singh Medical Relief Society, which operates three rural charitable hospitals: in Beas, Punjab; Sikanderpur, Haryana; and in Bhota, Himachal Pradesh. All three hospitals function as primary care facilities with fully functioning medical departments such as: ophthalmology, orthopaedics, gynaecology &amp;amp; obstetrics, ENT, surgery &amp; anaesthesia, paediatrics, radiology, and dental. All medical services, including medicine and in-patient care are provided free of charge. The Beas Hospital is the largest hospital with 260 beds and treats on average 1,200 patients each day through its Outpatient Department (OPD). The Sikanderpur Hospital has 50 beds, the Bhota Hospital has 75 beds, and each treats about 450 patients each day through their Outpatient Departments. The large number of OPD patients is a reflection of the limited number of medical facilities in these rural farming communities. No distinction is made as to the background of the patients, either in regard to their economic status, social standing, or religious affiliation.\n\nWhile the focus of the path is spiritual, centred on an internal meditation practice, at the same time members are encouraged to volunteer their free time in seva (service), voluntary service to others regardless of religion, caste or colour. In this context, RSSB has supported disaster relief efforts in a number of emergency situations, building multi-purpose community shelters and housing. These include the Gujarat earthquake of 2000, the Kashmir earthquake of 2005, Leh cloudbursts and landslides of 2010, and the Nepal earthquake of 2015.\n\nThe Main Centre\nDera Baba Jaimal Singh is a mini-township with 7,000 residents. Since the Dera is the home of the spiritual leader of the organization, large crowds visit on specially designated weekends to hear his discourses. These crowds average between 200,000 to 500,000 people depending on the season. The administration has become highly skilled in managing and providing facilities for large numbers of people on a short-term basis.</string>
    <string name="satsang_venue">The Satsang Venue</string>
    <string name="meeting_venue">Dera meeting venue</string>
    <string name="overview_4">In order to provide a sheltered satsang venue for these gatherings, the Dera’s engineering department has constructed one of the largest covered structures in Asia, designed and fabricated on site using a lightweight space-frame technology. The roof provides a covered area where up to 500,000 people can be seated, and which can easily be expanded as the need arises. A computerized digital audio system was specially designed for the venue to provide the best possible sound for such a challenging environment.</string>
    <string name="food">Food</string>
    <string name="dera_langar">Dera langar</string>
    <string name="overview_5">To feed the visitors three meals a day, several approaches are taken. The langar (a place where food is served free of charge) is the primary means. The free langar complex covers over 48 acres and operates around the clock. Capable of feeding up to 300,000 people per meal, 50,000 in a single sitting, it has a mostly volunteer staff who prepare and serve simple but nourishing food suitable to local tastes. As an example, the langar annually cooks more than 350,000 kilos of rice and uses more than 2.6 million kilos of wheat to make the traditional flat breads. Meals are also served at canteens and snack bars at a nominal price.</string>
    <string name="shelter">Shelter</string>
    <string name="overview_6">The Dera seeks to be as self-sufficient and environmentally friendly as possible. Every year thousands of trees are planted. Many lawns and parks beautify the colony and provide space for visitors and residents to rest and relax. More than 1,250 acres of land are cultivated for growing vegetables and fruits that are used in the langar and by Dera residents. Organic farming methods are being adapted to local conditions. The Dera has its own water supply, water treatment plant and solid waste treatment facility. It has its own electrical sub-station and large electrical generator back-up facility to supply emergency power to the whole community. In addition, the Dera generates 19.5 megawatts (peak) electricity from photovoltaic (solar) panels mounted on the rooftops of eight large sheds.</string>
    <string name="dera_guest_hostel">Dera guest hostels</string>
    <string name="overview_7">The colony is visited by people from around the world and all walks of life. To provide temporary accommodations for everyone, a variety of facilities are offered, all free of charge. There are a number of guest hostels with individual rooms and attached baths, hostels with dormitory-style rooms, and other large buildings to house visitors.</string>
    <string name="the_community">The Community</string>
    <string name="dera_school">Dera Pathseekers School</string>
    <string name="overview_8">The Pathseekers School is a recent project established for the benefit of the children of Dera residents and the staffs of the Dera and Beas hospitals. It currently serves approximately 850 students from the primary to secondary levels. The school is professionally run and equipped with up-to-date laboratories and computers, and offers a full range of arts, sports and academic programs. The students receive a well-rounded education – up to India’s Certified Board Education standard.</string>
    <string name="soami_ji">Soami ji</string>
    <string name="sawan_singh">Maharaj Sawan Singh Ji</string>
</resources>