<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_above="@+id/rl_googleAd"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorYellow"
        tools:context=".OverviewActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_8dp"
                android:background="@drawable/border_back"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_dera"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_margin="@dimen/dimen_8dp"
                    android:scaleType="fitXY" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_8dp"
                    android:layout_marginBottom="@dimen/dimen_8dp"
                    android:text="@string/dera_jaimal" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_8dp"
                android:text="@string/overview_1"
                android:textSize="20sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_8dp"
                android:background="@drawable/border_back"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_lib"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_margin="@dimen/dimen_8dp"
                    android:scaleType="fitXY" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_8dp"
                    android:layout_marginBottom="@dimen/dimen_8dp"
                    android:text="@string/dera_lib" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_8dp"
                android:text="@string/overview_2"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_8dp"
                android:background="@drawable/border_back"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_hospital"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_margin="@dimen/dimen_8dp"
                    android:scaleType="fitXY" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_8dp"
                    android:layout_marginBottom="@dimen/dimen_8dp"
                    android:text="@string/beas_hospital" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_8dp"
                android:text="@string/overview_3"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_8dp"
                android:text="@string/satsang_venue"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_8dp"
                android:background="@drawable/border_back"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_meeting"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_margin="@dimen/dimen_8dp"
                    android:scaleType="fitXY" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_8dp"
                    android:layout_marginBottom="@dimen/dimen_8dp"
                    android:text="@string/meeting_venue" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_8dp"
                android:text="@string/overview_4"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_8dp"
                android:text="@string/food"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_8dp"
                android:background="@drawable/border_back"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_langar"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_margin="@dimen/dimen_8dp"
                    android:scaleType="fitXY" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_8dp"
                    android:layout_marginBottom="@dimen/dimen_8dp"
                    android:text="@string/dera_langar" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_8dp"
                android:text="@string/overview_5"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_8dp"
                android:text="@string/shelter"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_8dp"
                android:background="@drawable/border_back"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_hostal"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_margin="@dimen/dimen_8dp"
                    android:scaleType="fitXY" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_8dp"
                    android:layout_marginBottom="@dimen/dimen_8dp"
                    android:text="@string/dera_guest_hostel" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_8dp"
                android:text="@string/overview_6"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_8dp"
                android:text="@string/the_community"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_8dp"
                android:background="@drawable/border_back"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_commnity"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_margin="@dimen/dimen_8dp"
                    android:scaleType="fitXY" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_8dp"
                    android:layout_marginBottom="@dimen/dimen_8dp"
                    android:text="Dera Photovoltaic (solar) panels" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_8dp"
                android:text="@string/overview_7"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_8dp"
                android:background="@drawable/border_back"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_school"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_margin="@dimen/dimen_8dp"
                    android:scaleType="fitXY" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_8dp"
                    android:layout_marginBottom="@dimen/dimen_8dp"
                    android:text="@string/dera_school" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_8dp"
                android:layout_marginBottom="@dimen/dimen_8dp"
                android:text="@string/overview_8"
                android:textSize="20sp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <include layout="@layout/view_googlead"></include>
</RelativeLayout>